// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action Creator: Sending Domains Create domain should be assigned a subaccount 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "domain": "domain.com",
        "shared_with_subaccounts": false,
      },
      "headers": Object {
        "x-msys-subaccount": 101,
      },
      "method": "POST",
      "url": "/v1/sending-domains",
    },
    "type": "CREATE_SENDING_DOMAIN",
  },
]
`;

exports[`Action Creator: Sending Domains Create domain should be assigned to master 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "domain": "domain.com",
        "shared_with_subaccounts": false,
      },
      "headers": Object {},
      "method": "POST",
      "url": "/v1/sending-domains",
    },
    "type": "CREATE_SENDING_DOMAIN",
  },
]
`;

exports[`Action Creator: Sending Domains Create domain should be shared with all subaccount 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "domain": "domain.com",
        "shared_with_subaccounts": true,
      },
      "headers": Object {},
      "method": "POST",
      "url": "/v1/sending-domains",
    },
    "type": "CREATE_SENDING_DOMAIN",
  },
]
`;

exports[`Action Creator: Sending Domains Remove should remove calls API 1`] = `
Array [
  Object {
    "meta": Object {
      "headers": Object {},
      "method": "DELETE",
      "url": "/v1/sending-domains/example.com",
    },
    "type": "DELETE_SENDING_DOMAIN",
  },
]
`;

exports[`Action Creator: Sending Domains Remove should remove includes subaccount header with required 1`] = `
Array [
  Object {
    "meta": Object {
      "headers": Object {
        "x-msys-subaccount": 101,
      },
      "method": "DELETE",
      "url": "/v1/sending-domains/example.com",
    },
    "type": "DELETE_SENDING_DOMAIN",
  },
]
`;

exports[`Action Creator: Sending Domains Update should request with correct post data 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "is_default_bounce_domain": true,
      },
      "headers": Object {},
      "method": "PUT",
      "url": "/v1/sending-domains/domain.com",
    },
    "type": "UPDATE_SENDING_DOMAIN",
  },
]
`;

exports[`Action Creator: Sending Domains Update should update domain owned by subaccount 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "is_default_bounce_domain": true,
      },
      "headers": Object {
        "x-msys-subaccount": 101,
      },
      "method": "PUT",
      "url": "/v1/sending-domains/domain.com",
    },
    "type": "UPDATE_SENDING_DOMAIN",
  },
]
`;

exports[`Action Creator: Sending Domains Verify Token should dispatch verify abuse token action 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "abuse_at_token": "12345",
      },
      "domain": "sub.com",
      "headers": Object {
        "x-msys-subaccount": 101,
      },
      "method": "POST",
      "type": "abuse_at",
      "url": "/v1/sending-domains/sub.com/verify",
    },
    "type": "VERIFY_TOKEN",
  },
]
`;

exports[`Action Creator: Sending Domains Verify Token should dispatch verify mailbox token action 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "verification_mailbox_token": "12345",
      },
      "domain": "sub.com",
      "headers": Object {
        "x-msys-subaccount": 101,
      },
      "method": "POST",
      "type": "verification_mailbox",
      "url": "/v1/sending-domains/sub.com/verify",
    },
    "type": "VERIFY_TOKEN",
  },
]
`;

exports[`Action Creator: Sending Domains Verify Token should dispatch verify postmaster token action 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "postmaster_at_token": "12345",
      },
      "domain": "sub.com",
      "headers": Object {
        "x-msys-subaccount": 101,
      },
      "method": "POST",
      "type": "postmaster_at",
      "url": "/v1/sending-domains/sub.com/verify",
    },
    "type": "VERIFY_TOKEN",
  },
]
`;

exports[`Action Creator: Sending Domains Verify should dispatch verify abuse action 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "abuse_at_verify": true,
      },
      "headers": Object {
        "x-msys-subaccount": 101,
      },
      "method": "POST",
      "url": "/v1/sending-domains/sub.com/verify",
    },
    "type": "VERIFY_SENDING_DOMAIN_ABUSE_AT",
  },
]
`;

exports[`Action Creator: Sending Domains Verify should dispatch verify cname action 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "cname_verify": true,
      },
      "headers": Object {},
      "method": "POST",
      "url": "/v1/sending-domains/domain.com/verify",
    },
    "type": "VERIFY_SENDING_DOMAIN_CNAME",
  },
]
`;

exports[`Action Creator: Sending Domains Verify should dispatch verify dkim action 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "dkim_verify": true,
      },
      "headers": Object {
        "x-msys-subaccount": 101,
      },
      "method": "POST",
      "url": "/v1/sending-domains/sub.com/verify",
    },
    "type": "VERIFY_SENDING_DOMAIN_DKIM",
  },
]
`;

exports[`Action Creator: Sending Domains Verify should dispatch verify mailbox action 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "verification_mailbox": "example",
        "verification_mailbox_verify": true,
      },
      "headers": Object {
        "x-msys-subaccount": 101,
      },
      "method": "POST",
      "url": "/v1/sending-domains/sub.com/verify",
    },
    "type": "VERIFY_SENDING_DOMAIN_VERIFICATION_MAILBOX",
  },
]
`;

exports[`Action Creator: Sending Domains Verify should dispatch verify postmaster action 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "postmaster_at_verify": true,
      },
      "headers": Object {
        "x-msys-subaccount": 101,
      },
      "method": "POST",
      "url": "/v1/sending-domains/sub.com/verify",
    },
    "type": "VERIFY_SENDING_DOMAIN_POSTMASTER_AT",
  },
]
`;

exports[`Action Creator: Sending Domains Verify should verify as abuse when using the mailbox action 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "abuse_at_verify": true,
      },
      "headers": Object {
        "x-msys-subaccount": 101,
      },
      "method": "POST",
      "url": "/v1/sending-domains/sub.com/verify",
    },
    "type": "VERIFY_SENDING_DOMAIN_ABUSE_AT",
  },
]
`;

exports[`Action Creator: Sending Domains Verify should verify as postmaster when using the mailbox action 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "postmaster_at_verify": true,
      },
      "headers": Object {
        "x-msys-subaccount": 101,
      },
      "method": "POST",
      "url": "/v1/sending-domains/sub.com/verify",
    },
    "type": "VERIFY_SENDING_DOMAIN_POSTMASTER_AT",
  },
]
`;

exports[`Action Creator: Sending Domains should clear current sending domain 1`] = `
Array [
  Object {
    "type": "CLEAR_SENDING_DOMAIN",
  },
]
`;

exports[`Action Creator: Sending Domains should request a list 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "GET",
      "url": "/v1/sending-domains",
    },
    "type": "LIST_SENDING_DOMAINS",
  },
]
`;

exports[`Action Creator: Sending Domains should request a sending domain 1`] = `
Array [
  Object {
    "meta": Object {
      "id": 123,
      "method": "GET",
      "showErrorAlert": false,
      "url": "/v1/sending-domains/123",
    },
    "type": "GET_SENDING_DOMAIN",
  },
]
`;
